--- a/css/general-style.css
+++ b/css/general-style.css
@@ -2,8 +2,8 @@
 body {
 	color: var(--color);
 	overflow: hidden;
-	--background: #0f0f0f;
-	--color: #dfdfdf;
+	--background: #000000;
+	--color: #ffffff;
 	--points: #ffffff;
 	background: var(--background)
 }
